test/files/pos/t5703/Base.java
public abstract class Base<Params> {
	public abstract void func(Params[] params);
}