test/files/neg/t4581/static_2.java




public class static_2 {
	public static void main(String[] args) {
		Constants.Const = 17;
		Constants.FinalConst = 99;
		Constants.MutableField = 199;
	}
}




